force-app/main/default/objects/SMS_BORPayment__c/SMS_BORPayment__c.object-meta.xml
<CustomObject>
    <label>SMS BORPayment</label>
    <nameField>
        <displayFormat>BOR-{00000000}</displayFormat>
        <label>SMS_BORPayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS BORPayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>