force-app/main/default/objects/SMS_BORPayment__c/fields/BOR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>BOR_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOR Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS BORPayments</relationshipLabel>
    <relationshipName>SMS_BORPayments</relationshipName>
    <type>Lookup</type>
</CustomField>